# fastRAG

./: .gitignore  GEMINI.md  main.py  plan.md  pyproject.toml  requirements.txt
docs/: README.md
fastrag/: chunking.py  core.py  data_sources.py  embeddings.py  llm_integrations.py  vector_stores.py
fastrag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
policy_docs/: axis_policy_docs.txt  bob_policy_docs.txt  hdfc_policy_doc.txt  icici_policy_docs.txt  pnb_policy_docs.txt  sbi_policy_docs.txt
tests/: test_core.py
